<resources>

    <!-- Here is where we define strings so they will act as global variables -->
    <!-- name is how we reference the variable, the text is what we want to appear, right now these are just placeholders -->

    <!-- the naming convention for app_name is different than the rest because the template looks for app_name by default -->

    <string name="app_name">PlantID</string>

    <string name="welcomeText">Welcome to the PlantID app!</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="question_title">Title</string>
    <string name="progress">Progress</string>
    <string name="search">Search</string>
    <string name="app_icon">App Icon</string>

    <string name="query_category">Query Category</string>


    <string name="q1text">What is the Plant Group?</string>
    <string name="q1CheckButtonOption1">tree</string>
    <string name="q1CheckButtonOption2">grass</string>
    <string name="q1CheckButtonOption3">shrub</string>
    <string name="q1CheckButtonOption4">succulent</string>
    <string name="q1CheckButtonOption5">forb</string> <!-- this is the section for forb but I figured noone would know what a "Forb" is -->

    <string name="q2text">What is the Leaf Shape?</string>
    <string name="q2CheckButtonOption1">simple</string>
    <string name="q2CheckButtonOption2">lobed</string>
    <string name="q2CheckButtonOption3">pinnate</string>
    <string name="q2CheckButtonOption4">compound/ deeply divided</string>
    <string name="q2CheckButtonOption5">blade</string>
    <string name="q2CheckButtonOption6">N.A.</string>

    <string name="q3text">What is the Leaf Arrangement?</string>
    <string name="q3CheckButtonOption1">alternate</string>
    <string name="q3CheckButtonOption2">opposite</string>
    <string name="q3CheckButtonOption3">bundled</string>
    <string name="q3CheckButtonOption4">whorled</string>
    <string name="q3CheckButtonOption5">basal</string>
    <string name="q3CheckButtonOption6">rosette</string>

    <string name="q4text">What is the Growth Form?</string>
    <string name="q4CheckButtonOption1">prostrate</string>
    <string name="q4CheckButtonOption2">decumbent</string>
    <string name="q4CheckButtonOption3">ascending</string>
    <string name="q4CheckButtonOption4">erect</string>
    <string name="q4CheckButtonOption5">mat</string>
    <string name="q4CheckButtonOption6">clump-forming</string>
    <string name="q4CheckButtonOption7">rosette</string>
    <string name="q4CheckButtonOption8">basal</string>
    <string name="q4CheckButtonOption9">vine</string>

    <string name="q5text">Does the Plant have a Flower?</string>
    <string name="q5CheckButtonOption1">Has a flower</string>

    <string name="q6text">What Color is the Flower?</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>
    <string name="white">white</string>
    <string name="orange">orange</string>
    <string name="green">green</string>
    <string name="pink">pink</string>
    <string name="yellow">yellow</string>


    <string name="q7text">What is the Flower Symmetry?</string>
    <string name="q7CheckButtonOption1">radial</string>
    <string name="q7CheckButtonOption2">bilateral</string>
    <string name="q7CheckButtonOption3">asymmetrical</string>



    <string name="title_activity_question_template">questionTemplate</string>
    <string name="title_activity_plant_group_question">plantGroupQuestion</string>
    <string name="title_activity_plant_form">plantFormActivity</string>

</resources>
