<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <!-- The field ID must be unique within this xml
    if you guys want to rename these to plant_group_checkbox_tree etc make sure you change it
    in StartPage aswell
    -->
    <include
        android:id="@+id/leaf_shape_template"
        layout="@layout/common_question"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="359dp"
        android:layout_height="350dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2">

            <CheckBox
                android:id="@+id/leaf_shape_checkbox1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:onClick="respondToButton"
                android:text="@string/q2CheckButtonOption1" />

            <CheckBox
                android:id="@+id/leaf_shape_checkbox2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:onClick="respondToButton"
                android:text="@string/q2CheckButtonOption2" />

            <CheckBox
                android:id="@+id/leaf_shape_checkbox3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:onClick="respondToButton"
                android:text="@string/q2CheckButtonOption3" />

            <CheckBox
                android:id="@+id/leaf_shape_checkbox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:onClick="respondToButton"
                android:text="@string/q2CheckButtonOption4" />

            <CheckBox
                android:id="@+id/leaf_shape_checkbox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="respondToButton"
                android:text="@string/q2CheckButtonOption5" />

            <CheckBox
                android:id="@+id/leaf_shape_checkbox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:onClick="respondToButton"
                android:text="@string/q2CheckButtonOption6" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>