<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TableLayout
        android:id="@+id/question_container"
        android:layout_width="213dp"
        android:layout_height="201dp"
        android:layout_marginBottom="168dp"
        android:layout_marginEnd="87dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="87dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="142dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/imageButton3"
                android:layout_width="71dp"
                android:layout_height="67dp"


                android:onClick="respondToButton"
                android:tag="@string/red"
                android:background="@color/red"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="101dp" />

            <CheckBox
                android:id="@+id/imageButton4"
                android:layout_width="71dp"
                android:layout_height="67dp"
                android:background="@color/white"
                android:onClick="respondToButton"


                android:tag="@string/white"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="101dp" />

            <CheckBox
                android:id="@+id/imageButton9"
                android:layout_width="71dp"
                android:layout_height="67dp"
                android:tag="@string/blue"

                android:background="@color/purple"
                android:onClick="respondToButton"

                tools:layout_editor_absoluteX="276dp"
                tools:layout_editor_absoluteY="101dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/imageButton5"
                android:layout_width="71dp"
                android:layout_height="67dp"

                android:tag="@string/pink"
                android:background="@color/pink"
                android:onClick="respondToButton"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="328dp" />

            <CheckBox
                android:id="@+id/imageButton8"
                android:layout_width="71dp"
                android:layout_height="67dp"

                android:tag="@string/green"
                android:background="@color/green"
                android:onClick="respondToButton"
                tools:layout_editor_absoluteX="156dp"
                tools:layout_editor_absoluteY="328dp" />

            <CheckBox
                android:id="@+id/imageButton2"
                android:layout_width="71dp"
                android:layout_height="67dp"

                android:tag="@string/blue"
                android:background="@color/blue"
                android:onClick="respondToButton"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="215dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/imageButton7"
                android:layout_width="71dp"
                android:layout_height="67dp"
                android:tag="@string/orange"
                android:background="@color/orange"
                android:onClick="respondToButton"

                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="215dp" />

            <CheckBox
                android:id="@+id/imageButton"
                android:layout_width="71dp"
                android:layout_height="67dp"

                android:tag="@string/yellow"
                android:background="@color/yellow"
                android:onClick="respondToButton"
                tools:layout_editor_absoluteX="276dp"
                tools:layout_editor_absoluteY="215dp" />
        </TableRow>

    </TableLayout>


    <include
        android:id="@+id/flower_color_template"
        layout="@layout/common_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</android.support.constraint.ConstraintLayout>