<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_progress3"
        android:layout_width="162dp"
        android:layout_height="29dp"
        android:layout_marginEnd="102dp"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="102dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_title2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="168dp"
        android:layout_marginLeft="164dp"
        android:layout_marginRight="168dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="14dp"
        android:text="@string/question_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_progress3" />

    <include
        android:id="@+id/button_templates"
        layout="@layout/common_top"
        android:layout_width="84dp"
        android:layout_height="77dp" />

    <Button
        android:id="@+id/question_next"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:enabled="false"
        android:onClick="respondToNextButton"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>